--- a/style.css
+++ b/style.css
@@ -74,23 +74,21 @@ img {
 
 @media screen and (max-width: 420px) {
   .row{
+    width: 95%;
   }
   #lezioni .row>.left,
   #lezioni .row>.right {
-    float: none;
-    margin: auto;
+    width: 95%;
   }
   #steps .row>.left,
   #steps .row>.central,
   #steps .row>.right{
-    float: none;
-    margin: auto;
-    padding: 15px 0;
+    width: 95%;
   }
   img{
     height: 150px;
   }
   body{
-    font-size: 30px;
+    font-size: 20px;
   }
 }
