--- a/style.css
+++ b/style.css
@@ -73,6 +73,11 @@ img {
 }
 
 @media screen and (max-width: 420px) {
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
   .row{
     width: 95%;
   }
